# plumbline

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  robot-behavior-gate.yml
bench/: maze_scenes.py  om1_gazebo_gate.py
bench/golden/episodes/om1-gazebo-maze-003/: events.jsonl  manifest.json
docs/: README.md  api.md  concepts.md  conceptual-soundness-review.md  determinism-envelope.md  dx-assessment.md  experiment-c.md  faq.md  limitations.md  math-review-section7.md  observability.md  om1-integration.md  production-readiness-review.md  pytest-plugin.md  quickstart.md  record-om1-gazebo.md  related-work-audit-2026-07.md  related-work.md  results-experiment-b-om1.md  results-experiment-c.md  results-om1-gazebo.md  stability.md  writing-an-adapter.md
examples/: README.md  _env.py  experiment_a.py  experiment_b.py  experiment_b_om1.py  experiment_c.py  modal_validate.py  modal_ws_validate.py  om1_sil_config.json5  record_om1_sil.py  toy_loop.py
modal/: README.md  gazebo_om1.py  llm.py  vlm.py  ws_captions.py
plumbline/: __init__.py  __main__.py  cli.py  embedding.py  pytest_plugin.py  record_mode.py  recording.py  session.py
plumbline/adapters/: __init__.py  _template.py  action_matcher.py  base.py  conformance.py  g1.py  generic.py  om1.py
plumbline/bench/: __init__.py  example_gate.py  leaderboard.py  openai_client.py  scenes.py  verbosity.py
plumbline/core/: __init__.py  clock.py  interceptor.py  matcher.py  recorder.py  replayer.py  seam.py  store.py  trace.py
plumbline/fidelity/: __init__.py  bridge.py  decision.py  judge.py  metrics.py
plumbline/observability/: __init__.py  baselines.py  feed.py  otlp.py  trace_diff.py
plumbline/observability/grafana/: plumbline-regression.json  plumbline-telemetry.json
plumbline/proxy/: __init__.py  http.py  normalizers.py  otel.py  recording.py  server.py  streaming.py  tick.py  ws.py
plumbline/regression/: __init__.py  gate.py  gating.py  golden.py
plumbline/transport/: __init__.py  bus.py  zenoh_shim.py  zenoh_tap.py
spec/: plumbline-engineering-spec.md  plumbline-project-spec.md
tests/: test_baselines.py  test_bridge.py  test_cli.py  test_cli_adapter_loading.py  test_cli_export.py  test_cli_record_replay.py  test_cli_scenes_diff.py  test_concurrency.py  test_crash_recovery.py  test_determinism.py  test_divergence.py  test_dx_surface.py  test_embedding.py  test_example_experiment_b.py  test_feed.py  test_fidelity.py  test_g1_action_schema.py  test_g1_counterfactual.py  test_g1_e2e.py  test_gate.py  test_generic_contract.py  test_generic_counterfactual.py  test_generic_e2e.py  test_golden_gazebo.py  test_grafana_dashboards.py  test_http_replay.py  test_integrated_recording.py  test_judge.py  test_leaderboard.py  test_matchers.py  test_modal_validate.py  test_noise_floor.py  test_observability_status.py  test_om1_counterfactual.py  test_om1_e2e.py  test_openai_client.py  test_otlp_export.py  test_proxy.py  test_proxy_counterfactual.py  test_proxy_fidelity.py  (+18 more)
