[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plumbline"
version = "0.1.0"
description = "Record-replay and fusion-fidelity evaluation for language-bus robot runtimes."
readme = "spec/plumbline-project-spec.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Plumbline contributors" }]
dependencies = []

[project.optional-dependencies]
# The core substrate is dependency-free. The recording HTTP proxy server needs an
# async HTTP client (httpx) and, for `plumbline record`/`replay`, an ASGI server
# (uvicorn); both are justified for the I/O-bound proxy (spec §4.2) and opt-in so
# `pip install plumbline` stays light.
proxy = ["httpx>=0.27", "uvicorn>=0.30", "websockets>=12"]
# The Zenoh bus tap. The shim (plumbline.transport.zenoh_shim) imports no zenoh —
# it duck-types a session the caller opens — so this extra is purely to install the
# real client for that caller. Pin/verify against your OM1 build (the API churns).
zenoh = ["eclipse-zenoh>=1.0.0"]
# A real semantic embedder for the free-text matcher / gate (spec §3.7). Lazily
# imported (plumbline.embedding), so it does not weigh on the core install.
embeddings = ["sentence-transformers>=3.0"]
# The runnable examples (examples/experiment_a.py, experiment_c.py) generate images
# and call an OpenAI-compatible endpoint.
examples = ["pillow>=10", "httpx>=0.27"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pre-commit>=3.8",
    "httpx>=0.27",
]

[project.scripts]
plumbline = "plumbline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["plumbline"]

# --- Ruff -------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["plumbline", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]

# --- mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["plumbline", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# --- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
