[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plumbline"
version = "0.1.0"
description = "Record-replay and fusion-fidelity evaluation for language-bus robot runtimes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
authors = [{ name = "Plumbline contributors" }]
keywords = [
    "robotics", "record-replay", "determinism", "regression-testing",
    "llm-agents", "vlm", "multimodal", "reproducibility", "observability", "om1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

# TODO(release): set to the real repo once the host/name is decided (the name
# "Plumbline" is still a working name and the repo home is undecided — see the
# open release questions). Placeholder owner below.
[project.urls]
Homepage = "https://github.com/kaushikb11/plumbline"
Repository = "https://github.com/kaushikb11/plumbline"
Documentation = "https://github.com/kaushikb11/plumbline/tree/main/docs"
Issues = "https://github.com/kaushikb11/plumbline/issues"

[project.optional-dependencies]
# The core substrate is dependency-free. The recording HTTP proxy server needs an
# async HTTP client (httpx) and, for `plumbline record`/`replay`, an ASGI server
# (uvicorn); both are justified for the I/O-bound proxy (spec §4.2) and opt-in so
# `pip install plumbline` stays light.
proxy = ["httpx>=0.27", "uvicorn>=0.30", "websockets>=12"]
# The Zenoh bus tap. The shim (plumbline.transport.zenoh_shim) imports no zenoh —
# it duck-types a session the caller opens — so this extra is purely to install the
# real client for that caller. Pin/verify against your OM1 build (the API churns).
zenoh = ["eclipse-zenoh>=1.0.0"]
# A real semantic embedder for the free-text matcher / gate (spec §3.7). Lazily
# imported (plumbline.embedding), so it does not weigh on the core install.
embeddings = ["sentence-transformers>=3.0"]
# The runnable examples (examples/experiment_a.py, experiment_c.py) generate images
# and call an OpenAI-compatible endpoint.
examples = ["pillow>=10", "httpx>=0.27"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pre-commit>=3.8",
    "httpx>=0.27",
]

[project.scripts]
plumbline = "plumbline.cli:main"

# Auto-load the pytest plugin (record/replay fixtures + the gate-as-assertion).
[project.entry-points.pytest11]
plumbline = "plumbline.pytest_plugin"

# Built-in adapters, discoverable by name via importlib.metadata; third-party
# runtimes register their own adapters under this same group.
[project.entry-points."plumbline.adapters"]
om1 = "plumbline.adapters.om1:OM1Adapter"
g1 = "plumbline.adapters.g1:G1Adapter"
generic = "plumbline.adapters.generic:GenericAgentAdapter"

[tool.hatch.build.targets.wheel]
packages = ["plumbline"]

# --- Ruff -------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["plumbline", "tests"]

[tool.ruff.lint.per-file-ignores]
# Embedded OM1 JSON5 config / prompt strings must stay verbatim.
"modal/gazebo_om1.py" = ["E501"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]

# --- mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["plumbline", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# --- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
